# Assignment2

./: Cargo.toml  build.rs
Allfiles/: input.txt  output.txt  output2.txt
src/: deserialized.rs  person.proto  serialized.rs
