[package]
name = "assignment2"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
byteorder = "1.5.0"
prost = "0.13.3"
prost-types = "0.13.3"  # For common types like `Timestamp`
varint-rs = "2.2.0"
protobuf = "3.7.1"

[build-dependencies]
prost-build = "0.13.3"

[[bin]]
name = "serializer"
path = "src/serialized.rs"         

[[bin]]
name = "deserializer"
path = "src/deserialized.rs"

